[gd_scene load_steps=2 format=3 uid="uid://pause_menu_ui"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_script"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="PausePanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(300, 350)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -175.0
offset_right = 150.0
offset_bottom = 175.0

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="PausePanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.1, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "RESUME"

[node name="SettingsButton" type="Button" parent="PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "QUIT TO MENU"
